--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="call:+243 970 94 64 14" aria-lebel="Phone"><i class="phone fa-solid fa-phone"></i></a>
                         <a href="https://m.me/Albatros" aria-lebel="Messenger"><i class="messenger fa-brands fa-facebook-messenger"></i></a>
                         <a href="https://wa.me/243970946414" aria-lebel="WhatsApp"><i class="whatsapp fa-brands fa-whatsapp"></i></a>
-                        <a href="mailto:mdidierbashige4@gmail.com" aria-lebel="E-mail"><i class="mail icon solid fa-envelope"></i></a>
+                        <a href="mailto:mdidierbashige4@gmail.com" aria-lebel="E-mail"><i class="bi bi-envelope-fill mail"></i></a>
                     </div>
                 </div>
             </ul>
@@ -76,7 +76,7 @@
                     <span>Avant de me confier votre projet,</span>
                     <span>Commençons par la prise de contacts ! Je reste joignable tous les jours de 6h à 22h
                     </span>
-                    <span>et je vous généralement en 3 minutes maximum.</span>
+                    <span>et je vous réponds généralement en 3 minutes maximum.</span>
                 </p>
             </div>
             <div class="right-side">
@@ -106,7 +106,7 @@
                 <div class="util obs">
                     <div class="header">
                         <h3>Photoshop</h3>
-                        <i>#</i>
+                        <img src="./images/logo_photoshop.png" alt="Logo Adobe Photoshop">
                     </div>
                     <div class="progressbar">
                         <div class="progress-value photoshop"></div>
@@ -117,24 +117,24 @@
                 <div class="util obs">
                     <div class="header">
                         <h3>Illustrator</h3>
-                        <i>#</i>
+                        <img src="./images/logo_illustrator.png" alt="Logo Adobe illustrator">
                     </div>
                     <div class="progressbar">
                         <div class="progress-value illustrator"></div>
                     </div>
                     <p class="level">85%</p>
-                    <p class="utility">Avec une telle maîtrise, mon outil de prédilection pour la conception de logos</p>
+                    <p class="utility">Avec une telle maîtrise, illustrator mon outil de prédilection pour la conception de logos</p>
                 </div>
                 <div class="util obs">
                     <div class="header">
                         <h3>Figma</h3>
-                        <i>#</i>
+                        <img src="./images/logo_figma.png" alt="Logo Figma">
                     </div>
                     <div class="progressbar">
                         <div class="progress-value figma"></div>
                     </div>
                     <p class="level">92%</p>
-                    <p class="utility">C'est mon préféré en concetption et prototypage des interfaces utilisateur web et app</p>
+                    <p class="utility">Figma est mon préféré en concetption et prototypage des interfaces utilisateur web et app</p>
                 </div>
             </div>
         </section>
@@ -165,32 +165,17 @@
 
             <div class="services-container">
                 <div class="service obs">
-                    <i>#</i>
+                    <i class="bi bi-bezier2"></i>
                     <h3 class="service-name">Graphic Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
                 <div class="service obs">
-                    <i>#</i>
+                    <i class="bi bi-palette"></i>
                     <h3 class="service-name">Web Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
                 <div class="service obs">
-                    <i>#</i>
-                    <h3 class="service-name">UI / UX Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service obs">
-                    <i>#</i>
-                    <h3 class="service-name">Graphic Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service obs">
-                    <i>#</i>
-                    <h3 class="service-name">Web Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service obs">
-                    <i>#</i>
+                    <i class="bi bi-ui-radios"></i>
                     <h3 class="service-name">UI / UX Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
