--- a/index.html
+++ b/index.html
@@ -197,30 +197,36 @@
             </div>
 
             <ul class="gallery">
+                <li class="web"><img src="./images/projects/web/cartoon-graphic-design-landing-page_52683-70881.webp" alt=""></li>
+                <li class="web"><img src="./images/projects/web/3d-interface-website-presentation-mockup-isolated_359791-211.webp" alt=""></li>
+                <li class="web"><img src="./images/projects/web/7797487_3761908.jpg" alt=""></li>
+                <li class="web"><img src="./images/projects/web/american-food-website-app-template_23-2148477329.webp" alt=""></li>
+                <li class="web"><img src="./images/projects/web/landing-page-design-mocksite_23-2148157122.jpg" alt=""></li>
+                <li class="web"><img src="./images/projects/web/Luxterior - Interior Landing Page.png" alt=""></li>
+                <li class="web"><img src="./images/projects/web/programming-landing-page_52683-1852.jpg" alt=""></li>
+                <li class="web"><img src="./images/projects/web/beautiful-laptop-screen-mockup-ad-with-presentation-slides_53876-98790.webp" alt=""></li>
+                <li class="web"><img src="./images/projects/web/seo-optimization-landing-page-design_23-2148123548.jpg" alt=""></li>
+                <li class="web"><img src="./images/projects/web/web-template-burger-restaurant_23-2148485059.webp" alt=""></li>
 
-                <li class="graphic"><img src="images/exemple/Logo Albatros Bleu.jpg" alt=""></li>
-                <li class="graphic"><img src="images/exemple/243970946414_status_eb2afe47fbb643308e59f13d654e1ed5.jpg" alt=""></li>
-                <li class="graphic"><img src="images/exemple/ANNIV EMMANUEL.jpg" alt=""></li>
-                <li class="graphic"><img src="images/exemple/ANNIV LAETITIA DG.jpg" alt=""></li>
-                <li class="web"><img src="images/exemple/ANNIV LOUISE.jpg" alt=""></li>
-                <li class="web"><img src="images/exemple/Home page - Desktop.png" alt=""></li>
-                <li class="web"><img src="images/exemple/banner.JPG" alt=""></li>
-                <li class="web"><img src="images/exemple/CLOE THEME 1.jpg" alt=""></li>
-                <li class="web"><img src="images/exemple/Anniv Rebecca.jpg" alt=""></li>
-                <li class="web"><img src="images/exemple/Goma le luxe chrismass.jpg" alt=""></li>
-                <li class="ui"><img src="images/exemple/SAVE THE DATE DESMADEL.jpg" alt=""></li>
-                <li class="ui"><img src="images/exemple/SEMAINE DE L'ENVIRONNEMENT ACNDC.jpg" alt=""></li>
-                <li class="ui"><img src="images/exemple/Desktop - Home page.png" alt=""></li>
-                <li class="ui"><img src="images/exemple/243970946414_status_70c5d2e721df43a3b43f3a7fd52ad6ac.jpg" alt=""></li>
-                <li class="ui"><img src="images/exemple/AR Label Home Template.jpg" alt=""></li>
-                <li class="other"><img src="images/exemple/IMG-20221027-WA0026.jpg" alt=""></li>
-                <li class="other"><img src="images/exemple/IMG_9053.jpg" alt=""></li>
-                <li class="other"><img src="images/exemple/ANNIV JENNIFER.jpg" alt=""></li>
-                <li class="other"><img src="images/exemple/localhost_5500__radio=on&quantity=(iPad).png" alt=""></li>
-                <li class="other"><img src="images/exemple/localhost_5500__radio=on&quantity=2(iPhone 6_7_8 Plus).png" alt=""></li>
-                <li class="graphic"><img src="images/exemple/NGUVU TECH QUID.jpg" alt=""></li>
-                <li class="graphic"><img src="images/exemple/Screenshot (20221103-102950)-1.jpg" alt=""></li>
-                <li class="graphic"><img src="images/exemple/Logo Albatros Black.jpg" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/premium-mobile-phone-screen-mockup-template_53876-65749.webp" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/banking-app-interface_23-2148604464.webp" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/gradient-responsive-website-design_52683-89071.webp" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/workout-tracker-app-interface_23-2148653679.webp" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/travel-app-screens-interface-design_23-2148602411.webp" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/mobile-phone-screen-mockup-design_53876-65978.webp" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/furniture-shopping-app-interface_23-2148660330.webp" alt=""></li>
+
+                <li class="graphic"><img src="./images/projects/graphic/cagoule.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/ANNIV LAETITIA DG.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/AR Label Home Template.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/ETIQUETTE ADEC LOTOBA.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/Logo le Fils.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/SEMAINE DE L'ENVIRONNEMENT ACNDC.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/SAVE THE DATE DESMADEL.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/IMG-20221027-WA0026.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/t-shirt.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/ANNIV EMMANUEL.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/Logo Albatros Bleu.jpg" alt=""></li>
             </ul>
         </section>
     </main>
