Change telephone icon in navbar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
 
             <div>
-                <a href="tel:+243970946414" class="phone-number" aria-label="Appeler le +243 970946414"><i class="fa-solid fa-phone"></i>+243 970 94 64 14</a>
+                <a href="tel:+243970946414" class="phone-number" aria-label="Appeler le +243 970946414"><i class="bi bi-telephone-fill"></i>+243 970 94 64 14</a>
             </div>
 
             <div class="mobile-icon"  aria-hidden="true" >
