Change default active tab

--- a/index.html
+++ b/index.html
@@ -186,17 +186,29 @@
 
         <section class="projects" id="projects">
             <h1 class="main-title">Projets en vedette</h1>
-            <p class="description">Avec plus de 7 ans d'expérience et plus de 20 mille projets réalisés, voici mes projets en vedette, les plus recents...</p>
+            <p class="description">Avec plus de 7 ans d'expérience et plus de 20 mille projets réalisés, voici mes projets en vedette les plus récents</p>
 
             <div class="tabs-container">
-                <button class="tab all active">Tous</button>
-                <button class="tab graphic ">Graphic Design</button>
+                <button class="tab all">Tous</button>
+                <button class="tab graphic active">Graphic Design</button>
                 <button class="tab web">Web Design</button>
                 <button class="tab ui">UI / UX Design</button>
-                <button class="tab other">Autres</button>
             </div>
 
             <ul class="gallery">
+
+                <li class="graphic"><img src="./images/projects/graphic/cagoule.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/ANNIV LAETITIA DG.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/AR Label Home Template.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/ETIQUETTE ADEC LOTOBA.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/Logo le Fils.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/SEMAINE DE L'ENVIRONNEMENT ACNDC.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/SAVE THE DATE DESMADEL.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/IMG-20221027-WA0026.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/t-shirt.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/ANNIV EMMANUEL.jpg" alt=""></li>
+                <li class="graphic"><img src="./images/projects/graphic/Logo Albatros Bleu.jpg" alt=""></li>
+
                 <li class="web"><img src="./images/projects/web/cartoon-graphic-design-landing-page_52683-70881.webp" alt=""></li>
                 <li class="web"><img src="./images/projects/web/3d-interface-website-presentation-mockup-isolated_359791-211.webp" alt=""></li>
                 <li class="web"><img src="./images/projects/web/7797487_3761908.jpg" alt=""></li>
@@ -214,19 +226,7 @@
                 <li class="ui"><img src="/images/projects/ui/workout-tracker-app-interface_23-2148653679.webp" alt=""></li>
                 <li class="ui"><img src="/images/projects/ui/travel-app-screens-interface-design_23-2148602411.webp" alt=""></li>
                 <li class="ui"><img src="/images/projects/ui/mobile-phone-screen-mockup-design_53876-65978.webp" alt=""></li>
-                <li class="ui"><img src="/images/projects/ui/furniture-shopping-app-interface_23-2148660330.webp" alt=""></li>
-
-                <li class="graphic"><img src="./images/projects/graphic/cagoule.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/ANNIV LAETITIA DG.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/AR Label Home Template.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/ETIQUETTE ADEC LOTOBA.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/Logo le Fils.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/SEMAINE DE L'ENVIRONNEMENT ACNDC.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/SAVE THE DATE DESMADEL.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/IMG-20221027-WA0026.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/t-shirt.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/ANNIV EMMANUEL.jpg" alt=""></li>
-                <li class="graphic"><img src="./images/projects/graphic/Logo Albatros Bleu.jpg" alt=""></li>
+                <li class="ui"><img src="/images/projects/ui/furniture-shopping-app-interface_23-2148660330.webp" alt=""></li>               
             </ul>
         </section>
     </main>
