Add popup window for quick contact

--- a/index.html
+++ b/index.html
@@ -52,17 +52,28 @@
                 <p class="salutation">Salut, mon nom est</p>
                 <h1><span>Didier Bashige</span><span>Albatros</span></h1>
                 <p>Designer professionnel de plusieurs années d'expérience dans ce domaine.</p>
-                <a href="#contacts" class="btn btn-default">Me contacter</a>
+                <button class="btn btn-default contact-btn">Me contacter</button>
             </div>
         </div>
     </header>
 
     <main>
+        <aside class="modal-wrapper">
+            <a href="#" class="btn btn-default quick-contact contact-btn"><i class="bi bi-chat-dots"></i><span>Me contacter</span></a>
+            <div class="popup" aria-hidden="true">
+                <a href="tel:+243 970 94 64 14"> <i class="bi bi-telephone-fill"></i> Appel</a>
+                <a href="sms:+243 970 94 64 14"> <i class="bi bi-chat-dots-fill"></i> Chat SMS</a>
+                <a href="https://m.me/didier.bashige.58"> <i class="bi bi-messenger"></i> Chat Messenger</a>
+                <a href="https://wa.me/243822262087"> <i class="bi bi-whatsapp"></i> WhatsApp</a>
+                <a href="mailto:mdidierbashige4@gmail.com"> <i class="bi bi-envelope-fill"></i> E-mail</a>
+            </div>
+        </aside>
+
         <section class="who-am-i container">
             <div class="left-side">
                 <h2 class="main-title">Qui suis-je ?</h2>
                 <p class="description obs">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
-                <a href="#" class="btn btn-default obs">Télécharger mon CV</a>
+                <a href="#" class="btn btn-default obs">Télécharger mon CV <i class="bi bi-cloud-arrow-down"></i></a>
             </div>
 
             <div class="right-side">
@@ -181,7 +192,7 @@
                 </div>
             </div>
 
-            <a href="#contacts" class="btn btn-bordered obs">Me contacter</a>
+            <button class="btn btn-bordered obs contact-btn">Me contacter</button>
         </section>
 
         <section class="projects" id="projects">
@@ -237,7 +248,7 @@
             <div class="social-links">
                 <a aria-label="Facebook" href="https://www.facebook.com/Art-Revolution-Label-107910888138657"><i class=" facebook fa-brands fa-facebook-f"></i></a>
                 <a aria-label="Instagram" href="https://instagram.com/artrevolutionl?utm_medium=copy_link"><i class="instagram fa-brands fa-instagram"></i></a>
-                <a aria-label="Youtube" href="https://www.youtube.com/channel/UCRnwPS0AwVfhcGamWB5c2Vw"><i class="youtube fa-brands fa-youtube"></i></a>
+                <a aria-label="Youtube" href="https://www.youtube.com/channel/UCRnwPS0AwVfhcGamWB5c2Vw"><i class="bi bi-telegram"></i></a>
                 <a aria-label="Twitter" href="https://twitter.com/ArtrevolutionL?s=20&t=Ki69INw9lkm3wDQhJ8QK5w"><i class="twitter fa-brands fa-twitter"></i></a>
             </div>
         </div>
