Change aside link to button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main>
         <aside class="modal-wrapper">
-            <a href="#" class="btn btn-default quick-contact contact-btn"><i class="bi bi-chat-dots"></i><span>Me contacter</span></a>
+            <button class="btn btn-default quick-contact contact-btn"><i class="bi bi-chat-dots"></i><span>Me contacter</span></button>
             <div class="popup" aria-hidden="true">
                 <a href="tel:+243 970 94 64 14"> <i class="bi bi-telephone-fill"></i> Appel</a>
                 <a href="sms:+243 970 94 64 14"> <i class="bi bi-chat-dots-fill"></i> Chat SMS</a>
