Add missing links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main>
         <aside class="modal-wrapper">
-            <button class="btn btn-default quick-contact contact-btn"><i class="bi bi-chat-dots"></i><span>Me contacter</span></button>
+            <button class="btn btn-default quick-contact contact-btn"><i class="bi bi-chat-dots"></i>Me contacter</button>
             <div class="popup" aria-hidden="true">
                 <a href="tel:+243 970 94 64 14"> <i class="bi bi-telephone-fill"></i>Appel</a>
                 <a href="sms:+243 970 94 64 14"> <i class="bi bi-chat-dots-fill"></i>Chat SMS</a>
@@ -248,14 +248,15 @@
                 <a aria-label="Facebook" href="https://www.facebook.com/didier.bashige.58"><i class=" facebook fa-brands fa-facebook-f"></i></a>
                 <a aria-label="Instagram" href="https://instagram.com/albatros_bashige"><i class="instagram fa-brands fa-instagram"></i></a>
                 <a aria-label="Telegram" href="https://t.me/Albatrossdesign"><i class="telegram bi bi-telegram"></i></a>
-                <a aria-label="Twitter" href="https://twitter.com/ArtrevolutionL?s=20&t=Ki69INw9lkm3wDQhJ8QK5w"><i class="twitter fa-brands fa-twitter"></i></a>
+                <a aria-label="Twitter" href="https://twitter.com/BashigeDidier"><i class="twitter fa-brands fa-twitter"></i></a>
             </div>
         </div>
         <div class="copyrights">
             <p>&copy; <span class="years">2021</span> &bull; Albatros Design</p>
         </div>
     </footer>
-   
+    
+
     <script src="assets/js/app.js"></script>
 </body>
 </html>
