--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="left-side">
                 <h2 class="main-title">Qui suis-je ?</h2>
                 <p class="description obs">Je suis designer, je conçois entre autre des contenus destinés à l'imprimerie et à la publication en ligne, donc tout ce qui est poster, flyer, cover, affiche événementiel et autres, je conçois également des maquettes web pour les développeurs web et des interfaces utilisateurs pour les développeurs d'applications mobiles et de bureau, en tenant surtout compte de l'expérience utilisateur !</p>
-                <a href="./docs/cv_abatros.pdf" class="btn btn-default obs">Télécharger mon CV<i class="bi bi-cloud-arrow-down"></i></a>
+                <a href="./docs/cv_albatros.pdf" class="btn btn-default obs">Télécharger mon CV<i class="bi bi-cloud-arrow-down"></i></a>
             </div>
 
             <div class="right-side">
