Update page titles and descriptions

--- a/competences.html
+++ b/competences.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Albatros Design</title>
-    <meta name="description" content="Salut, mon nom est Didier Bashige Albatros, Designer professionnel de plusieurs années d'expérience">
+    <title>Albatros Design - Compétences</title>
+    <meta name="description" content="Je vous fait découvrir ici mes atouts pour les outils que j'utilise dans mon quotidien afin de vous offrir des projets finis bien solides">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="./images/logo_albatros_design_small.png">
