--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Albatros Design - Accueil</title>
+    <title>Albatros Design - </title>
     <meta name="description" content="Salut, mon nom est Didier Bashige Albatros, Designer professionnel de plusieurs années d'expérience">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -224,11 +224,11 @@
                 <li class="web"><img src="./images/projects/web/3d-interface-website-presentation-mockup-isolated_359791-211.webp" alt="Interface website"></li>
                 <li class="web"><img src="./images/projects/web/7797487_3761908.jpg" alt="Maquette web american food"></li>
                 <li class="web"><img src="./images/projects/web/american-food-website-app-template_23-2148477329.webp" alt="Maquette d'un site d'aliments"></li>
-                <li class="web"><img src="./images/projects/web/landing-page-design-mocksite_23-2148157122.jpg" alt="Maquette d'un site online shopping"></li>
-                <li class="web"><img src="./images/projects/web/Luxterior - Interior Landing Page.png" alt="Maquette Interior"></li>
-                <li class="web"><img src="./images/projects/web/programming-landing-page_52683-1852.jpg" alt="Maquette programming landing page"></li>
+                <!-- <li class="web"><img src="./images/projects/web/landing-page-design-mocksite_23-2148157122.jpg" alt="Maquette d'un site online shopping"></li> -->
+                <!-- <li class="web"><img src="./images/projects/web/Luxterior - Interior Landing Page.png" alt="Maquette Interior"></li> -->
+                <!-- <li class="web"><img src="./images/projects/web/programming-landing-page_52683-1852.jpg" alt="Maquette programming landing page"></li> -->
                 <li class="web"><img src="./images/projects/web/beautiful-laptop-screen-mockup-ad-with-presentation-slides_53876-98790.webp" alt="Maquette et écran d'ordinateur"></li>
-                <li class="web"><img src="./images/projects/web/seo-optimization-landing-page-design_23-2148123548.jpg" alt="Maquette site SEO"></li>
+                <!-- <li class="web"><img src="./images/projects/web/seo-optimization-landing-page-design_23-2148123548.jpg" alt="Maquette site SEO"></li> -->
                 <li class="web"><img src="./images/projects/web/web-template-burger-restaurant_23-2148485059.webp" alt="Template site restaurant"></li>
 
                 <li class="ui"><img src="/images/projects/ui/premium-mobile-phone-screen-mockup-template_53876-65749.webp" alt="Smartphone"></li>
