--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Albatros Design - </title>
     <meta name="description" content="Salut, mon nom est Didier Bashige Albatros, Designer professionnel de plusieurs années d'expérience">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="./images/logo_albatros_design_small.png">
     <link rel="apple-touch-icon" type="image/pngm" href="./images/logo_albatros_design_small.png">
 </head>
