Update design project images

--- a/index.html
+++ b/index.html
@@ -208,17 +208,18 @@
             </div>
 
             <ul class="gallery">
-                <li class="graphic"><img src="./images/projects/graphic/design_1.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_2.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_3.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_4.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_5.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_6.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_7.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_8.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_9.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_10.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/design_11.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
+                
+                <li><a href="./images/projects/graphic/design_1.jpg"><img src="./images/projects/graphic/design_1.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_2.jpg"><img src="./images/projects/graphic/design_2.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_3.jpg"><img src="./images/projects/graphic/design_3.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_4.jpg"><img src="./images/projects/graphic/design_4.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_5.jpg"><img src="./images/projects/graphic/design_5.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_6.jpg"><img src="./images/projects/graphic/design_6.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_7.jpg"><img src="./images/projects/graphic/design_7.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_8.jpg"><img src="./images/projects/graphic/design_8.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_9.jpg"><img src="./images/projects/graphic/design_9.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_10.jpg"><img src="./images/projects/graphic/design_10.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_11.jpg"><img src="./images/projects/graphic/design_11.jpg" alt=""></a></li>
 
                 <li class="web"><img src="./images/projects/web/cartoon-graphic-design-landing-page_52683-70881.webp" alt="Landing page"></li>
                 <li class="web"><img src="./images/projects/web/3d-interface-website-presentation-mockup-isolated_359791-211.webp" alt="Interface website"></li>
