Change Figma to Adobe XD

--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
                 </div>
                 <div class="util obs">
                     <div class="header">
-                        <h3>Figma</h3>
-                        <img src="./images/logo_figma.png" alt="Logo Figma">
+                        <h3>Adobe XD</h3>
+                        <img src="./images/logo_xd.png" alt="Logo Adobe XD">
                     </div>
                     <div class="progressbar">
-                        <div class="progress-value figma"></div>
+                        <div class="progress-value xd"></div>
                     </div>
                     <p class="level">92%</p>
-                    <p class="utility">Figma est mon préféré en conception et prototypage des interfaces utilisateur web et app</p>
+                    <p class="utility">Adobe XD est mon préféré en conception et prototypage des interfaces utilisateur web et app</p>
                 </div>
             </div>
         </section>
