Fix: change logo xd path

--- a/competences.html
+++ b/competences.html
@@ -92,10 +92,10 @@
                 <div class="util obs">
                     <div class="header">
                         <h3>Adobe XD</h3>
-                        <img src="./images/logo_lxd.png" alt="Logo Adobe XD">
+                        <img src="./images/logo_xd.png" alt="Logo Adobe XD">
                     </div>
                     <div class="progressbar">
-                        <div class="progress-value lxd"></div>
+                        <div class="progress-value xd"></div>
                     </div>
                     <p class="level">92%</p>
                     <p class="utility">Adobe XD est mon préféré en conception et prototypage des interfaces utilisateur web et app</p>
