--- a/projets.html
+++ b/projets.html
@@ -74,17 +74,18 @@
             </div>
 
             <ul class="gallery">
-                <li class="graphic"><img src="./images/projects/graphic/cagoule.jpg" alt="Cagoule imprimée Joyeux Noël"></li>
-                <li class="graphic"><img src="./images/projects/graphic/ANNIV LAETITIA DG.jpg" alt="Poster Joyeux anniversaire"></li>
-                <li class="graphic"><img src="./images/projects/graphic/AR Label Home Template.jpg" alt="Poster Art Revolution Label"></li>
-                <li class="graphic"><img src="./images/projects/graphic/ETIQUETTE ADEC LOTOBA.jpg" alt="Etiquette beurre d'arrachide Lotoba"></li>
-                <li class="graphic"><img src="./images/projects/graphic/Logo le Fils.jpg" alt="Logo le fils studio"></li>
-                <li class="graphic"><img src="./images/projects/graphic/SEMAINE DE L'ENVIRONNEMENT ACNDC.jpg" alt="Flyer semaine de l'environnment"></li>
-                <li class="graphic"><img src="./images/projects/graphic/SAVE THE DATE DESMADEL.jpg" alt="Poster save the date"></li>
-                <li class="graphic"><img src="./images/projects/graphic/IMG-20221027-WA0026.jpg" alt="Logo Nunua business"></li>
-                <li class="graphic"><img src="./images/projects/graphic/t-shirt.jpg" alt="Maquette de t-shirt à imprimer"></li>
-                <li class="graphic"><img src="./images/projects/graphic/ANNIV EMMANUEL.jpg" alt="Poster maquette à imprimer"></li>
-                <li class="graphic"><img src="./images/projects/graphic/Logo Albatros Bleu.jpg" alt="Logo Albatros design"></li>
+                
+                <li><a href="./images/projects/graphic/design_1.jpg"><img src="./images/projects/graphic/design_1.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_2.jpg"><img src="./images/projects/graphic/design_2.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_3.jpg"><img src="./images/projects/graphic/design_3.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_4.jpg"><img src="./images/projects/graphic/design_4.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_5.jpg"><img src="./images/projects/graphic/design_5.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_6.jpg"><img src="./images/projects/graphic/design_6.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_7.jpg"><img src="./images/projects/graphic/design_7.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_8.jpg"><img src="./images/projects/graphic/design_8.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_9.jpg"><img src="./images/projects/graphic/design_9.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_10.jpg"><img src="./images/projects/graphic/design_10.jpg" alt=""></a></li>
+                <li><a href="./images/projects/graphic/design_11.jpg"><img src="./images/projects/graphic/design_11.jpg" alt=""></a></li>
 
                 <li class="web"><img src="./images/projects/web/cartoon-graphic-design-landing-page_52683-70881.webp" alt="Landing page"></li>
                 <li class="web"><img src="./images/projects/web/3d-interface-website-presentation-mockup-isolated_359791-211.webp" alt="Interface website"></li>
