--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="./images/logo_albatros_design_small.png">
     <link rel="apple-touch-icon" type="image/pngm" href="./images/logo_albatros_design_small.png">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header id="accueil">
         <nav class="navbar">
             <div class="mobile-icon" aria-hidden="true">
                 <i aria-label="Menu" class="humburger bi bi-list"></i>
+                <button style="display: none;" class="hidden flex-col gap-[5px] justify-center items-center" id="menuBtn">
+                    <span class="bar w-3 h-1 bg-white rounded self-start origin-left"></span>
+                    <span class="bar w-8 h-1 bg-white rounded origin-center delay-100"></span>
+                    <span class="bar w-3 h-1 bg-white rounded self-end origin-right"></span>
+                </button>
             </div>
 
             <a href="index.html" aria-label="Accueil" class="nav-brand"><img src="./images/logo_albatros_design.png" alt="Logo Albatros Design"></a>
@@ -34,7 +40,7 @@
                         <a href="tel:+243 970 94 64 14" aria-lebel="Appel par téléphone"><i class="phone fa-solid fa-phone"></i></a>
                         <a href="https://m.me/didier.bashige.58" aria-lebel="Messenger"><i class="messenger fa-brands fa-facebook-messenger"></i></a>
                         <a href="https://wa.me/243811312172" aria-lebel="WhatsApp"><i class="whatsapp fa-brands fa-whatsapp"></i></a>
-                        <a href="mailto:mdidierbashige4@gmail.com" aria-lebel="E-mail"><i class="bi bi-envelope-fill mail"></i></a>
+                        <a href="mailto:albatdi4@gmail.com" aria-lebel="E-mail"><i class="bi bi-envelope-fill mail"></i></a>
                     </div>
                 </div>
             </ul>
@@ -66,7 +72,7 @@
                 <a href="sms:+243 970 94 64 14"> <i class="bi bi-chat-dots-fill"></i>Chat SMS</a>
                 <a href="https://m.me/didier.bashige.58"> <i class="bi bi-messenger"></i>Messenger</a>
                 <a href="https://wa.me/243811312172"> <i class="bi bi-whatsapp"></i>WhatsApp</a>
-                <a href="mailto:mdidierbashige4@gmail.com"> <i class="bi bi-envelope-fill"></i>E-mail</a>
+                <a href="mailto:albatdi4@gmail.com"> <i class="bi bi-envelope-fill"></i>E-mail</a>
             </div>
         </aside>
 
@@ -105,7 +111,7 @@
                     <a href="tel:+243 970 94 64 14"><span>+243 970 94 64 14</span><span>Appel ou SMS (des coûts peuvent s'appliquer)</span></a>
                     <a href="https://m.me/didier.bashige.58"><span>Messenger</span><span>Discussion sur facebook Messenger</span></a>
                     <a href="https://wa.me/243811312172"><span>WhatsApp</span><span>Discussion sur WhatsApp</span></a>
-                    <a href="mailto:mdidierbashige4@gmail.com"><span>mdidierbashige4@gmail.com</span><span>Laisser couriel</span></a>
+                    <a href="mailto:albatdi4@gmail.com"><span>albatdi4@gmail.com</span><span>Laisser couriel</span></a>
                 </div>
             </div>
         </section>
@@ -255,6 +261,7 @@
         </div>
         <div class="copyrights">
             <p>&copy; <span class="years">2023</span> &bull; Albatros Design</p>
+            <p class="text-white/10 text-center text-3xl mt-4 pt-4 border-t border-white/10 border-dashed" style="font-family:'StaycClassy';">&bull;CreativeMind</p>
         </div>
     </footer>
     
