--- a/projets.html
+++ b/projets.html
@@ -34,7 +34,7 @@
                         <a href="tel:+243 970 94 64 14" aria-lebel="Appel par téléphone"><i class="phone fa-solid fa-phone"></i></a>
                         <a href="https://m.me/didier.bashige.58" aria-lebel="Messenger"><i class="messenger fa-brands fa-facebook-messenger"></i></a>
                         <a href="https://wa.me/243811312172" aria-lebel="WhatsApp"><i class="whatsapp fa-brands fa-whatsapp"></i></a>
-                        <a href="mailto:mdidierbashige4@gmail.com" aria-lebel="E-mail"><i class="bi bi-envelope-fill mail"></i></a>
+                        <a href="mailto:albatdi4@gmail.com" aria-lebel="E-mail"><i class="bi bi-envelope-fill mail"></i></a>
                     </div>
                 </div>
             </ul>
@@ -58,7 +58,7 @@
                 <a href="sms:+243 970 94 64 14"> <i class="bi bi-chat-dots-fill"></i>Chat SMS</a>
                 <a href="https://m.me/didier.bashige.58"> <i class="bi bi-messenger"></i>Messenger</a>
                 <a href="https://wa.me/243811312172"> <i class="bi bi-whatsapp"></i>WhatsApp</a>
-                <a href="mailto:mdidierbashige4@gmail.com"><i class="bi bi-envelope-fill"></i>E-mail</a>
+                <a href="mailto:albatdi4@gmail.com"><i class="bi bi-envelope-fill"></i>E-mail</a>
             </div>
         </aside>
 
