Add Creative Mind Signature

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
         <div class="copyrights">
             <p>&copy; <span class="years">2023</span> &bull; Albatros Design</p>
-            <p class="text-white/10 text-center text-3xl mt-4 pt-4 border-t border-white/10 border-dashed" style="font-family:'StaycClassy';">&bull;CreativeMind</p>
+            <p class="text-white/10 text-center text-4xl mt-8 pt-8 border-t border-white/10 border-dotted" style="font-family:'Stay Classy';">&bull;CreativeMind</p>
         </div>
     </footer>
     
