--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
                         <a href="tel:+243 970 94 64 14" aria-lebel="Appel par téléphone"><i class="phone fa-solid fa-phone"></i></a>
                         <a href="https://m.me/didier.bashige.58" aria-lebel="Messenger"><i class="messenger fa-brands fa-facebook-messenger"></i></a>
                         <a href="https://wa.me/243811312172" aria-lebel="WhatsApp"><i class="whatsapp fa-brands fa-whatsapp"></i></a>
-                        <a href="mailto:albatdi4@gmail.com" aria-lebel="E-mail"><i class="bi bi-envelope-fill mail"></i></a>
+                        <a href="mailto:contact@albatdi.com" aria-lebel="E-mail"><i class="bi bi-envelope-fill mail"></i></a>
                     </div>
                 </div>
             </ul>
@@ -60,7 +60,7 @@
                 <a href="sms:+243 970 94 64 14"> <i class="bi bi-chat-dots-fill"></i>Chat SMS</a>
                 <a href="https://m.me/didier.bashige.58"> <i class="bi bi-messenger"></i>Messenger</a>
                 <a href="https://wa.me/243811312172"> <i class="bi bi-whatsapp"></i>WhatsApp</a>
-                <a href="mailto:albatdi4@gmail.com"> <i class="bi bi-envelope-fill"></i>E-mail</a>
+                <a href="mailto:contact@albatdi.com"> <i class="bi bi-envelope-fill"></i>E-mail</a>
             </div>
         </aside>
 
@@ -87,7 +87,7 @@
                     <a href="tel:+243 970 94 64 14"><span>+243 970 94 64 14</span><span>Appel ou SMS (des coûts peuvent s'appliquer)</span></a>
                     <a href="https://m.me/didier.bashige.58"><span>Messenger</span><span>Discussion sur facebook Messenger</span></a>
                     <a href="https://wa.me/243811312172"><span>WhatsApp</span><span>Discussion sur WhatsApp</span></a>
-                    <a href="mailto:albatdi4@gmail.com"><span>albatdi4@gmail.com</span><span>Laisser couriel</span></a>
+                    <a href="mailto:contact@albatdi.com"><span>contact@albatdi.com</span><span>Laisser couriel</span></a>
                 </div>
             </div>
         </section>
